Fixed auto scroll bug, firefox fix for scrollbar style

--- a/src/styles/MainPage.scss
+++ b/src/styles/MainPage.scss
@@ -106,170 +106,4 @@
       }
     }
   }
-
-  #messages-section {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 75%;
-
-    #arrow-icon {
-      color: white;
-      font-size: 2rem;
-      position: absolute;
-      left: 0;
-      top: 50%;
-      animation: jiggle 750ms infinite alternate-reverse both;
-    }
-
-    #no-message-container {
-      display: flex;
-      flex-direction: column-reverse;
-      align-items: center;
-      color: white;
-
-      h1 {
-        font-size: 1rem;
-      }
-
-      #no-message-icon {
-        color: white;
-        font-size: 8rem;
-      }
-    }
-  }
-
-  //     width: 25%;
-
-  //     #headers {
-  //       display: flex;
-  //       justify-content: space-around;
-  //       align-items: center;
-  //       margin-top: 17px;
-  //       p {
-  //         font-weight: 700;25%
-  //         font-size: 25px;
-  //         margin: 0;
-  //       }
-  //       #search {
-  //         width: 25px;
-  //         height: 25px;
-  //         margin: 0;
-  //         transition: transform 500ms, color 500ms;
-  //         &:hover {
-  //           color: $main-blue;
-  //           transform: scale(1.1);
-  //           transition: transform 500ms, color 500ms;
-  //         }
-  //       }
-  //     }
-  //     ul {
-  //       list-style: none;
-  //     }
-  //   }
-  //   #messages-section {
-  //     width: 65%;
-  //     padding: 15px;
-  //     #actions {
-  //       display: flex;
-  //       justify-content: space-between;
-  //       #profile {
-  //         display: flex;
-  //         justify-content: space-between;
-  //         align-items: center;
-  //         #image {
-  //           height: 35px;
-  //           width: 35px;
-  //           border: solid black 1px;
-  //           border-radius: 25px;
-  //           margin-right: 10px;
-  //           display: flex;
-  //           justify-content: center;
-  //           align-items: center;
-  //         }
-  //       }
-  //       #actions-profile {
-  //         display: flex;
-  //         * {
-  //           margin: 0 10px;
-  //           height: 30px;
-  //           width: 30px;
-  //           color: white;
-  //           transition: transform 500ms, color 500ms;
-  //           &:hover {
-  //             color: $main-blue;
-  //             transform: scale(1.1);
-  //             transition: transform 500ms, color 500ms;
-  //           }
-  //         }
-  //       }
-  //     }
-  //     #messages-placeholder {
-  //       display: flex;
-  //       flex-direction: column;
-  //       width: 60%;
-  //       height: 60%;
-  //       margin: 100px auto;
-
-  //       p {
-  //         display: flex;
-  //         font-size: 20px;
-  //         font-weight: 400;
-  //         margin: 15px auto;
-  //       }
-
-  //       img {
-  //         max-width: 500px;
-  //         aspect-ratio: 1;
-  //       }
-  //     }
-  //   }
-  // }
-
-  // #confirmation {
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   height: 100vh;
-  //   width: 100vw;
-  //   backdrop-filter: blur(15px);
-  //   display: flex;
-  //   flex-direction: column;
-  //   justify-content: center;
-  //   align-items: center;
-  //   p {
-  //     font-size: 40px;
-  //   }
-  //   #buttons {
-  //     display: flex;
-  //     gap: 20px;
-  //     button {
-  //       height: 50px;
-  //       width: 100px;
-  //       border-radius: 10px;
-  //       color: white;
-  //       border: none;
-  //       font-size: 20px;
-  //       font-weight: 600;
-  //     }
-  //     #yes {
-  //       background-color: $main-blue;
-  //       transition: background-color 750ms;
-  //       &:hover {
-  //         background-color: white;
-  //         color: $main-blue;
-  //         border: solid $main-blue 5px;
-  //       }
-  //     }
-  //     #no {
-  //       background-color: red;
-  //       transition: background-color 750ms;
-  //       &:hover {
-  //         background-color: white;
-  //         color: red;
-  //         border: solid red 5px;
-  //       }
-  //     }
-  //   }
 }
